--- a/README.Rmd
+++ b/README.Rmd
@@ -52,11 +52,23 @@ p1._LatLng__coords
 p1.lat()
 ```
 
+```{r}
+library(reticulate)
+s2s = import("s2sphere")
+latlng = s2s$LatLng(33, -122)
+s2s
+class(latlng)
+reticulate::conv
+```
+
+
 
 
 ```{r lib}
 library(s2sphere)
 ## basic example code
+p1 = s2s$convert
+os <- import("os")
 ```
 
 
