--- a/README.Rmd
+++ b/README.Rmd
@@ -42,6 +42,7 @@ import s2sphere
 
 r = s2sphere.RegionCoverer()
 p = s2sphere.LatLng(33, -122)
+p
 p1 = s2sphere.LatLng.from_degrees(33, -122)
 p2 = s2sphere.LatLng.from_degrees(33.1, -122.1)
 cell_ids = r.get_covering(s2sphere.LatLngRect.from_point_pair(p1, p2))
@@ -58,7 +59,7 @@ s2s = import("s2sphere")
 latlng = s2s$LatLng(33, -122)
 s2s
 class(latlng)
-
+s2sphere::LatLng(c(3, 9))
 
 ```
 
